# escrapper

./: CMakeLists.txt  ChangeLog  Doxyfile.in  README.md  ROADMAP  TODO
.github/workflows/: cmake-single-platform.yml
fixtures/: README.md  config_eol
src/: Mainpage.md  _config.h.in  config.c  config.h  constants.h  example  h2m.c  h2m.h  h2m_impl.h  list.c  list.h  logger.c  logger.h  main.c  persist.c  persist.h  scrapper.c  scrapper.h  ui.c  ui.h
src/examples/: h2m.c  list.c  logger.c
tests/: config.c  config.h  h2m_test.c  h2m_test.h  list_test.c  list_test.h  logger_test.c  logger_test.h  main.c  persist_test.c  persist_test.h  scrapper_test.c  scrapper_test.h
ui/: README.md  main.edc
